# manyworlds

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  manyworlds.py  manyworlds_cli.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: black.yml  build.yml  coverage.yml  mypy.yml  pytest.yml
docs/: conf.py  index.rst  manyworlds.rst  modules.rst
manyworlds/: __init__.py  __main__.py  data_table.py  exceptions.py  feature.py  scenario.py  scenario_forest.py  scenario_tree.py  step.py
requirements/: dev.txt
src/manyworlds/: scenario.py  scenario_forest.py  step.py
test/: test_cli.py  test_feature.py  test_invalid_input_files.py  test_scenario.py  test_scenario_forest.py  test_scenario_tree.py  test_step.py  test_tree.py
test/fixtures/: feature_graph.mermaid.txt  nested_feature.feature  scenarios_flat_relaxed.feature  scenarios_flat_strict.feature  scenarios_flat_strict_with_comments.feature  scenarios_forest.feature  scenarios_graph.mermaid.txt  scenarios_hierarchy.txt
test/fixtures/in/: feature.feature  scenario_forest.feature  scenario_forest_with_organizational_scenarios.feature
test/fixtures/in/invalid/: excessive_indentation.feature  excessive_step_indentation.feature  feature_after_scenario.feature  indented_action.feature  invalid_conjunction.feature  invalid_indentation.feature  invalid_line.feature
